<resources>
    <string name="app_name">Mijnmedicijn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">E-mail</string>
        <string name="password">Wachtwoord</string>
    <string name="already_have_an_account">Al een Account?</string>
    <string name="sign_up">Aanmelden</string>
    <string name="sign_in">Inloggen</string>
    <string name="don_t_have_an_account">Geen account?</string>
    <string name="confirm_password">Wachtwoord bevestigen</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="medicine_name">Medicijn naam</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reminders">Herinneringen</string>
    <string name="my_medication">Mijn Medicatie</string>
    <string name="settings">Instellingen</string>
    <string name="no_reminders_msg">Je hebt nog geen medicijn herineringen toegevoegd</string>
    <string name="you_don_t_have_any_saved_medications_yet">Je hebt nog geen opgeslagen medicatie</string>
    <string name="monday">Maandag</string>
    <string name="tuesday">Dinsdag</string>
    <string name="wednesday">Woensdag</string>
    <string name="thursday">Donderdag</string>
    <string name="friday">Vrijdag</string>
    <string name="saturday">Zaterdag</string>
    <string name="sunday">Zondag</string>
    <string name="days">Dagen</string>
    <string name="reminder_details">Herinnering Details</string>
    <string name="change_reminder_time">Verander Herinnering tijd</string>
    <string name="save_changes">Opslaan</string>
    <string name="edit">Wijzig</string>
    <string name="delete">Verwijder</string>
    <string name="time_for_your_medicine">Mijnmedicijn - Tijd voor je medicatie</string>
    <string name="taken">Genomen</string>
    <string name="dosage">Dosering</string>
    <string name="medicine_taken">Medicijn Genomen</string>
    <string name="record_dose">Dosering Opslaan</string>
    <string name="username">Gebruikersnaam</string>
    <string name="quantity">Hoeveelheid</string>
    <string name="unit">Soort</string>
    <string name="add_reminder_time">Selecteer een tijd</string>
    <string name="frequency_of_intake">Hoevaak innemen</string>
    <string name="repeat_after_every">Herhaal elke</string>
    <string name="save_reminder">Opslaan herinnering</string>
    <string name="choose_reminder_time">Kies een tijd</string>
    <string name="done">Klaar</string>



</resources>