<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_reminders">

    <fragment
        android:id="@+id/navigation_reminders"
        android:name="com.example.mustafa.mijnmedicijn.ui.reminders.RemindersFragment"
        android:label="@string/reminders"
        tools:layout="@layout/fragment_reminders" >
        <action
            android:id="@+id/action_navigation_reminders_to_addReminderFragment"
            app:destination="@id/addReminderFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit" />
        <action
            android:id="@+id/action_navigation_reminders_to_reminderDetailsFragment"
            app:destination="@id/reminderDetailsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_medication"
        android:name="com.example.mustafa.mijnmedicijn.ui.medication.MyMedicationFragment"
        android:label="@string/my_medication"
        tools:layout="@layout/fragment_my_medication" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.mustafa.mijnmedicijn.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/addReminderFragment"
        android:name="com.example.mustafa.mijnmedicijn.ui.reminders.AddReminderFragment"
        android:label="Medication Details"
        tools:layout="@layout/fragment_add_reminder" />
    <fragment
        android:id="@+id/reminderDetailsFragment"
        android:name="com.example.mustafa.mijnmedicijn.ui.reminders.EditReminderFragment"
        android:label="@string/reminder_details"
        tools:layout="@layout/fragment_edit_reminder" />
</navigation>