<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.reminders.EditReminderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medicine_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicineNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="25dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicineQuantityET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/unit"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/outline_hollow">

                <Spinner
                    android:id="@+id/unitSpinner"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/addReminderLayout"
                android:paddingEnd  ="15dp"
                android:paddingStart="15dp"
                android:background="@drawable/outline_hollow"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="55dp">
                <ImageView
                    android:id="@+id/addAlarmImg"
                    android:layout_centerVertical="true"
                    android:src="@drawable/alarm_icon"
                    android:layout_width ="25dp"
                    android:layout_height="25dp"
                    app:tint="@color/colorPrimary" />
                <TextView
                    android:layout_toEndOf="@+id/addAlarmImg"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/change_reminder_time"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/ReminderTimeTV"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/open_sans_bold"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/frequency_of_intake"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/outline_hollow">

                <Spinner
                    android:id="@+id/intakeSpinner"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/repeatAfterXDays"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/repeat_after_every"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/repeatDays"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/days"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/daysOfWeek"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/mondayCB"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/monday"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tuesdayCB"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/tuesday"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/wednesdayCB"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/wednesday"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/thursdayCB"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/thursday"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/fridayCB"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/friday"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/saturdayCB"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/saturday"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/sundayCB"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/sunday"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/saveReminderFAB"
                android:text="@string/save_changes"
                android:gravity="center"
                app:icon="@drawable/save_icon"
                app:iconTint="@android:color/white"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:letterSpacing="0.04"
                android:textColor="@android:color/white"
                android:fontFamily="@font/open_sans_bold"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="220dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>