<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Authentication.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--To use this you need to change styles.xml to Material i.e Theme.MaterialComponents.Light.NoActionBar!-->
        <ImageView
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/app_logo" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/email_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginEmailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/password_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/SignInFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:letterSpacing="0.02"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/logo_background"
            android:textSize="18sp"
            app:icon="@drawable/login_ico"
            app:iconGravity="end"
            app:iconTint="@color/logo_background" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_margin="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:text="@string/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/SignUpSwitchTV"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:clickable="true"
            android:paddingBottom="2dp"
            android:layout_marginStart="8dp"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signInPrgrs"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <TextView
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_marginTop="5dp"
            android:text="Signing In....."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</FrameLayout>